--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "hast-util-to-html": "^9.0.0",
     "hast-util-to-jsx-runtime": "^2.3.0",
     "hast-util-to-string": "^3.0.0",
+    "hastscript": "^9.0.0",
     "is-absolute-url": "^4.0.1",
     "js-yaml": "^4.1.0",
     "lightningcss": "^1.24.0",
@@ -65,13 +66,17 @@
     "pretty-time": "^1.1.0",
     "reading-time": "^1.5.0",
     "rehype-autolink-headings": "^7.1.0",
+    "rehype-components": "^0.3.0",
     "rehype-katex": "^7.0.0",
     "rehype-mathjax": "^6.0.0",
     "rehype-pretty-code": "^0.13.0",
     "rehype-raw": "^7.0.0",
     "rehype-slug": "^6.0.0",
+    "rehype-stringify": "^10.0.1",
     "remark": "^15.0.1",
     "remark-breaks": "^4.0.0",
+    "remark-directive": "^3.0.1",
+    "remark-directive-rehype": "^0.4.2",
     "remark-frontmatter": "^5.0.0",
     "remark-gfm": "^4.0.0",
     "remark-math": "^6.0.0",
